--- a/miler/templates/miler/mailing_create.html
+++ b/miler/templates/miler/mailing_create.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %}Создание рассылки{% endblock %}
 
 {% block content %}
 <h2>Создание рассылки</h2>
 <form method="post">
     {% csrf_token %}
-    {{ mailing_form.as_p }}
-    {{ message_form.as_p }}
+    {{ form|crispy }}
+    {{ message_form|crispy }}
     <button type="submit">Создать рассылку</button>
 </form>
 {% endblock %}
