--- a/miler/templates/miler/mailing_delete.html
+++ b/miler/templates/miler/mailing_delete.html
@@ -2,11 +2,11 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <h2>Удаление рассылки</h2>
-    <p>Вы уверены, что хотите удалить рассылку "{{ object.name }}"?</p>
+    <p>Вы уверены, что хотите удалить рассылку "{{ object }}"?</p>
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-danger">Удалить</button>
-        <a href="{% url 'catalog' %}" class="btn btn-secondary">Отмена</a>
+        <a href="{% url 'mailing_list' %}" class="btn btn-secondary">Отмена</a>
     </form>
 {% endblock content %}
